feat: Added 'preview' with port 8000, updated ALLOWED_HOSTS and CSRF_TRUSTED_ORIGINS and added new files: admin.py, apps.py, forms.py, models.py, serializers.py, tests.py, views.py in inventory directory

--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -12,7 +12,10 @@
     "p": {
       "name": "p",
       "command": "python -m manage runserver",
-      "runAtStart": true
+      "runAtStart": true,
+      "preview": {
+        "port": 8000
+      }
     }
   }
 }
